syntax="proto3";

package oaa.proto.messages;

message VoiceSessionRequest
{
    uint32 type = 1; // 1 = start, 2 = stop
}